--- a/app/src/main/res/layout/registration_activity.xml
+++ b/app/src/main/res/layout/registration_activity.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <EditText
-        android:id="@+id/edTitle"
+        android:id="@+id/edMail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="enter post title" />
-
+        android:hint="enter your mail" />
 
     <TextView
-        android:id="@+id/tvTitleError"
+        android:id="@+id/tvMailError"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/holo_red_dark"
+        android:visibility="gone" />
+
+    <EditText
+        android:id="@+id/edPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="enter your password" />
+
+    <TextView
+        android:id="@+id/tvPasswordError"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/holo_red_dark"
@@ -23,45 +32,26 @@
 
 
     <EditText
-        android:id="@+id/edBody"
+        android:id="@+id/edConfirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="enter post body" />
+        android:hint="confirm your password" />
 
     <TextView
-        android:id="@+id/tvBodyError"
+        android:id="@+id/tvConfirmError"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/holo_red_dark"
         android:visibility="gone" />
 
-    <EditText
-        android:id="@+id/edPhone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="enter phone " />
-
-    <TextView
-        android:id="@+id/tvPhoneError"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/holo_red_dark"
-        android:visibility="gone" />
 
     <Button
-        android:id="@+id/btnSubmit"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:onClick="onSubmit"
-        android:text="Submit" />
+        android:onClick="onRegisterClick"
+        android:text="Register" />
 
 
-    <ProgressBar
-        android:id="@+id/pbLoading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone" />
 </LinearLayout>
-
